# Linux-Dip-Sensor

./: CMakeLists.txt
.gitignore/: .gitignore
README.md/: README.md
modules/: dip_detector.c  dip_detector.h  display.c  display.h  periodTimer.c  periodTimer.h  sampler.c  sampler.h  udp_server.c  udp_server.h
noworky/: noworky  noworky.c
src/: main.c
src/hal/: adc.c  adc.h  led.c  led.h  rotary_encoder.c  rotary_encoder.h
